--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -248,6 +248,9 @@ jobs:
     - name: Set executable permissions
       run: chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/scripts/*
 
+    - name: Set vDSO script permissions
+      run: chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/kernel/vdso/*.sh
+
     - name: Build kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
