--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -251,6 +251,15 @@ jobs:
     - name: Set vDSO script permissions
       run: chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/kernel/vdso/*.sh
 
+    - name: Set executable permissions for specific paths
+    run: |
+    chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/scripts/* \
+             $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/kernel/vdso/*.sh \
+             $GITHUB_WORKSPACE/kernel_workspace/android-kernel/tools/build/cpio
+
+    - name: Set executable permissions recursively
+    run: chmod -R +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/
+
     - name: Build kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
