--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -251,13 +251,11 @@ jobs:
     - name: Set vDSO script permissions
       run: chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/kernel/vdso/*.sh
 
-    - name: Set executable permissions for specific paths
-      run: chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/scripts/* \
-             $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/kernel/vdso/*.sh \
-             $GITHUB_WORKSPACE/kernel_workspace/android-kernel/tools/build/cpio
-
     - name: Set executable permissions recursively
       run: chmod -R +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/
+
+    - name: Set cpio permissions
+      run: chmod +x $GITHUB_WORKSPACE/kernel_workspace/android-kernel/tools/build/cpio
 
     - name: Build kernel
       run: |
