--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/AKMAL29w/Source-kernel-samsung-a14-5g-android-14
+KERNEL_SOURCE=https://github.com/physwizz/a146p-T
 KERNEL_SOURCE_BRANCH=main
-KERNEL_CONFIG=a14xm_defconfig
+KERNEL_CONFIG=physwizz_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
