--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -200,7 +200,7 @@ jobs:
         fi
 
     - name: Setup KernelSU
-      if: env.ENABLE_KERNELSU == 'true'
+      if: env.ENABLE_KERNELSU == 'false'
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s ${{ env.KERNELSU_TAG }}
