--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -261,6 +261,10 @@ jobs:
       run: |
           sed -i '/uint8_t i2sctrl;/a volatile int dummy = i2sctrl;' $GITHUB_WORKSPACE/kernel_workspace/android-kernel/sound/soc/codecs/fs1815/fsm_core.c
 
+    - name: Mark dvfsrc as unused in helio-dvfsrc-sysfs.c
+      run: |
+          sed -i 's/struct helio_dvfsrc *dvfsrc;/struct helio_dvfsrc *dvfsrc __attribute__((unused));/' $GITHUB_WORKSPACE/kernel_workspace/android-kernel/drivers/devfreq/helio-dvfsrc-v3/helio-dvfsrc-sysfs.c
+
     - name: Build kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
